# pq-verify

./: -3.gitignore  CITATION.cff  DEMO.ipynb  LICENSE  MANIFEST.in  QUICKSTART.md  README-2.md  README.md  pq_verify-2.py  pq_verify.py  pyproject.toml  readme  sample_report.json  vendor_audit_template.py
pq_verify/: __init__.py  cli.py  core.py
tests/: test_pqverify.py
