[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pq-verify"
version = "2.6.0"
description = "Independent verification for ML-KEM / ML-DSA implementations — native field NTT verification, NIST ACVP, lattice parameter security, Coq certificates."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Nicholas Maino", email = "maiknown@gmail.com" },
]
keywords = [
    "post-quantum", "cryptography", "ML-KEM", "ML-DSA", "Kyber", "Dilithium",
    "FIPS-203", "FIPS-204", "NIST", "ACVP", "NTT", "verification", "lattice",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security :: Cryptography",
]
dependencies = []

# ML-DSA ACVP needs dilithium-py; ML-KEM ACVP needs kyber-py (both optional, in [full])

[project.optional-dependencies]
# Required to reproduce the 240/240 ACVP claim and the live KEM roundtrip.
full = ["kyber-py", "dilithium-py"]
# Developer tooling.
dev = ["pytest>=7.0", "kyber-py", "dilithium-py"]

[project.urls]
Homepage = "https://github.com/bigDSanalyst/pq-verify"
Repository = "https://github.com/bigDSanalyst/pq-verify"
"Zenodo DOI" = "https://doi.org/10.5281/zenodo.19302050"

[project.scripts]
pq-verify = "pq_verify.cli:main"

[tool.setuptools]
packages = ["pq_verify"]

[tool.setuptools.package-data]
pq_verify = ["*.c", "*.cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
